fix: responsive overflow

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -167,9 +167,9 @@ main
       // transform: translateY(calc(0px - (#{var(--blok-height)} / 2))) !important
       transform: translateY(-50%)
       transition: transform var(--transition-project-hover)
-    // @media (max-width: 770px)
-    //   .column:nth-child(n+3):not(.column-Icons)
-    //     display: none 
+    @media (max-width: 770px)
+      .column:nth-child(n+3):not(.column-Icons)
+        display: none 
   &-ProjectImages
     display: flex
     flex-wrap: wrap
